# Project-Facial-Emotion-Recognition

./: CMakeLists.txt  README.md  Reconocimiento de rostro.cpp  entrenando.py  proyecto.py  reconocimientoEmociones.py  requirements.txt
src/: main.cpp
static/css/: home.css
static/js/: home.js
templates/: index.html
